Regression: Face sets are no longer created in 3.4 when using Box Trim #103052

Closed
opened 2022-12-09 02:31:34 +01:00 by Hoang Duy Tran · 15 comments
Member

Simplified Report

  • Use Box Trim on the default sculpting sphere.
  • No face set is created.
  • In 3.3, a face set is created, hence the regression.

Original Report

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-02 21:53, hash: 9719fd6964

Short description of error
At this page of documentation:
https://docs.blender.org/manual/en/dev/sculpt_paint/sculpting/tools/box_trim.html

This text:
Screenshot 2022-12-09 at 01.22.35.png

Result after a Difference boolean operation:
Screenshot 2022-12-09 at 01.16.46.png

Result after a Join boolean operation:
Screenshot 2022-12-09 at 01.19.52.png

I cannot see any face set described in the text:

When using the Union or Join mode the new geometry is assigned to a new Face Set. When using Difference mode, interior geometry is also added to a new face set.

The older version, 3.3.1 worked as described:
Screenshot 2022-12-09 at 01.25.29.png

Just added another observation. The text for option 'Use Cursor for Depth' said:

Use cursor location and radius for the dimensions and position of the trimming shape. If not set, the tool uses the full depth of the object from the camera view.

The second part of the text clearly said:

If not set, the tool uses the full depth of the object from the camera view.

I personally cannot visualise any situations where you CANNOT set these parameters since I'm using mouse pointer to interact with the GUI, and the operation is performed after the mouse RELEASE event. Please tell me any situation where these parameters ('cursor location', 'radius') are not set?

## Simplified Report - Use Box Trim on the default sculpting sphere. - No face set is created. - In 3.3, a face set is created, hence the regression. ## Original Report **System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-02 21:53, hash: `9719fd6964` **Short description of error** At this page of documentation: https://docs.blender.org/manual/en/dev/sculpt_paint/sculpting/tools/box_trim.html This text: ![Screenshot 2022-12-09 at 01.22.35.png](https://archive.blender.org/developer/F14045787/Screenshot_2022-12-09_at_01.22.35.png) Result after a Difference boolean operation: ![Screenshot 2022-12-09 at 01.16.46.png](https://archive.blender.org/developer/F14045789/Screenshot_2022-12-09_at_01.16.46.png) Result after a Join boolean operation: ![Screenshot 2022-12-09 at 01.19.52.png](https://archive.blender.org/developer/F14045791/Screenshot_2022-12-09_at_01.19.52.png) I cannot see any face set described in the text: ``` When using the Union or Join mode the new geometry is assigned to a new Face Set. When using Difference mode, interior geometry is also added to a new face set. ``` The older version, 3.3.1 worked as described: ![Screenshot 2022-12-09 at 01.25.29.png](https://archive.blender.org/developer/F14045796/Screenshot_2022-12-09_at_01.25.29.png) Just added another observation. The text for option 'Use Cursor for Depth' said: ``` Use cursor location and radius for the dimensions and position of the trimming shape. If not set, the tool uses the full depth of the object from the camera view. ``` The second part of the text clearly said: ``` If not set, the tool uses the full depth of the object from the camera view. ``` I personally cannot visualise any situations where you CANNOT set these parameters since I'm using mouse pointer to interact with the GUI, and the operation is performed after the mouse RELEASE event. Please tell me any situation where these parameters ('cursor location', 'radius') are not set?
Author
Member

Added subscriber: @hoanguk

Added subscriber: @hoanguk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Omar Emara changed title from Sculpting - box trim - do not create a face set as described in documentation to Regression: Face sets are no longer created in 3.4 when using Box Trim 2022-12-09 09:38:45 +01:00
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Let me now if you need a bisect.

Let me now if you need a bisect.

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Not sure if it is now the intended behavior or not, but if you create a face set first (for example face set from visible) then it starts creating face sets...

blender_2022-12-09_16-41-32.mp4

Not sure if it is now the intended behavior or not, but if you create a face set first (*for example face set from visible)* then it starts creating face sets... [blender_2022-12-09_16-41-32.mp4](https://archive.blender.org/developer/F14046857/blender_2022-12-09_16-41-32.mp4)
Author
Member

In #103052#1457737, @TheRedWaxPolice wrote:
Not sure if it is now the intended behavior or not, but if you create a face set first (for example face set from visible) then it starts creating face sets...

blender_2022-12-09_16-41-32.mp4

Thank you for this feedback. When using 'Face Set from Visible'. I was expecting to see face sets created immediately on whatever I could see. Did not expect this to be the behaviour designed. Yes, it seemed to work this way. This should be documented in the online manual of how the feature works. Quite confusing to my normal understanding.

> In #103052#1457737, @TheRedWaxPolice wrote: > Not sure if it is now the intended behavior or not, but if you create a face set first (*for example face set from visible)* then it starts creating face sets... > > [blender_2022-12-09_16-41-32.mp4](https://archive.blender.org/developer/F14046857/blender_2022-12-09_16-41-32.mp4) Thank you for this feedback. When using 'Face Set from Visible'. I was expecting to see face sets created immediately on whatever I could see. Did not expect this to be the behaviour designed. Yes, it seemed to work this way. This should be documented in the online manual of how the feature works. Quite confusing to my normal understanding.
Member

Added subscribers: @JulienKaspar, @HooglyBoogly

Added subscribers: @JulienKaspar, @HooglyBoogly
Member

@JulienKaspar I think there are possible upsides to both behaviors-- the new face set might not be wanted, so it may be a waste to create it (potentially impacting performance later on). On the other hand, if it is helpful then it's a nice feature.

I see a few options:

  1. Remove the face set creation from the trim tool completely
  2. Always create face sets in the trim tool
  3. Add a tool option for whether to create face sets
  4. Add some more global "Enable Face Sets" in sculpt mode that can be used by more tools
@JulienKaspar I think there are possible upsides to both behaviors-- the new face set might not be wanted, so it may be a waste to create it (potentially impacting performance later on). On the other hand, if it is helpful then it's a nice feature. I see a few options: 1. Remove the face set creation from the trim tool completely 2. Always create face sets in the trim tool 3. Add a tool option for whether to create face sets 4. Add some more global "Enable Face Sets" in sculpt mode that can be used by more tools
Author
Member

In #103052#1457780, @HooglyBoogly wrote:
@JulienKaspar I think there are possible upsides to both behaviors-- the new face set might not be wanted, so it may be a waste to create it (potentially impacting performance later on). On the other hand, if it is helpful then it's a nice feature.

I see a few options:

  1. Remove the face set creation from the trim tool completely
  2. Always create face sets in the trim tool
  3. Add a tool option for whether to create face sets
  4. Add some more global "Enable Face Sets" in sculpt mode that can be used by more tools

I would vote 1, 3, or 4.

> In #103052#1457780, @HooglyBoogly wrote: > @JulienKaspar I think there are possible upsides to both behaviors-- the new face set might not be wanted, so it may be a waste to create it (potentially impacting performance later on). On the other hand, if it is helpful then it's a nice feature. > > I see a few options: > 1. Remove the face set creation from the trim tool completely > 2. Always create face sets in the trim tool > 3. Add a tool option for whether to create face sets > 4. Add some more global "Enable Face Sets" in sculpt mode that can be used by more tools I would vote 1, 3, or 4.

In #103052#1457777, @hoanguk wrote:
When using 'Face Set from Visible'. I was expecting to see face sets created immediately on whatever I could see. Did not expect this to be the behaviour designed. Yes, it seemed to work this way. This should be documented in the online manual of how the feature works. Quite confusing to my normal understanding.

Yeah, face set from visible is a little confusing...
When you have parts of the mesh hidden, it behaves as expected, but when you have nothing hidden, it acts like a "clear face set" and removes all the face sets if you have any... but it seems like somehow it also creates an "invisible" face set on the entire mesh... 🤔

> In #103052#1457777, @hoanguk wrote: > When using 'Face Set from Visible'. I was expecting to see face sets created immediately on whatever I could see. Did not expect this to be the behaviour designed. Yes, it seemed to work this way. This should be documented in the online manual of how the feature works. Quite confusing to my normal understanding. Yeah, face set from visible is a little confusing... When you have parts of the mesh hidden, it behaves as expected, but when you have nothing hidden, it acts like a "clear face set" and removes all the face sets if you have any... but it seems like somehow it also creates an "invisible" face set on the entire mesh... 🤔
Member

For now I think it would be best to go for 2. Just because this is most useful for this tool.

Later on, making this a tool option would be a logical extra feature.
But I'll mention this to the rest of the module and see what they think. 4 should be considered more.

For now I think it would be best to go for 2. Just because this is most useful for this tool. Later on, making this a tool option would be a logical extra feature. But I'll mention this to the rest of the module and see what they think. 4 should be considered more.
Hans Goudey self-assigned this 2022-12-12 21:24:33 +01:00

This issue was referenced by e22f49c801

This issue was referenced by e22f49c80192a7d3b3661ac132d7026d16b9d2e1

This issue was referenced by 29f342774c

This issue was referenced by 29f342774ce134c723a7acf80adfa408e482a042
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103052
No description provided.